# alx-backend-user-data

./: README.md  pyproject.toml
0x00-personal_data/: README.md  encrypt_password.py  filtered_logger.py
0x01-Basic_authentication/: README.md
0x01-Basic_authentication/api/v1/auth/: auth.py  basic_auth.py
0x02-Session_authentication/: README.md
0x02-Session_authentication/api/v1/: app.py
0x02-Session_authentication/api/v1/auth/: auth.py  basic_auth.py  session_auth.py  session_db_auth.py  session_exp_auth.py
0x02-Session_authentication/api/v1/views/: session_auth.py
0x02-Session_authentication/models/: user_session.py
0x03-user_authentication_service/: README.md  app.py  auth.py  db.py  main.py  user.py
